Hide table when there are no resources

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -695,7 +695,7 @@
                     </span>
                     <span class="clearfix"></span>
 
-                    <div class="resTable">
+                    <div class="resTable" ng-show="resourcesForDisplay.length != 0">
                         <div class="headerResTable">
                             <div class="colTable colRes1">
                                 <p>Nome</p>
